--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^5.59.16",
+    "@types/styled-components": "^5.1.34",
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,6 +38,7 @@
     "@storybook/test": "8.3.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/storybook__react": "^5.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
