--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.0.1"
